<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/etEmail"
        style="style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
    android:hint="@string/password"
    android:inputType="textPassword" />
    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_button"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:onClick="login"/>


   <Button
       android:id="@+id/create"
       style="@style/viewCustom"
       android:text="@string/createAct"
       android:textColor="@color/white"
       android:background="@drawable/rounded_corner_button"
       android:textSize="25dp"
       android:textAllCaps="false"
       android:onClick="register"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:textColor="#57504A"
        android:layout_below="@id/btnLogin"
        android:onClick="forgotPassword"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />
</LinearLayout>