<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:forceDarkAllowed="true"
    tools:context=".SettingsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-73dp">

    <Button
        android:id="@+id/button_ChangeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner_button_light"
        android:onClick="changeLang"
        android:text="@string/changeLanguage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_DeleteHist" />

    <EditText
        android:id="@+id/textViewDistance"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/distance"
        android:inputType="number"
        android:paddingHorizontal="5sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#7C7C7C"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_ViewSafeMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="281dp"
        android:text="@string/chooseDistance"
        android:textColor="#57504A"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_ViewSafeMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewTime"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/time"
        android:inputType="number"
        android:paddingHorizontal="5sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#7C7C7C"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_ViewSafeMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/chooseTime"
        android:textColor="#57504A"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistance" />

    <Button
        android:id="@+id/button_ViewSafeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:background="@drawable/rounded_corner_button_light2"
        android:onClick="toSafeMapActivity"
        android:text="@string/viewSafeMap"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_DeleteHist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner_button_light1"
        android:onClick="deleteHist"
        android:text="@string/deleteHist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ViewSafeMap"></Button>

    <Button
        android:id="@+id/button_SaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>